# JOB-20260615143959-000098

./: .env.example  Dockerfile  Dockerfile.api  README.md  SPEC.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  package.json  pyproject.toml  pyvenv.cfg  requirements.txt
.planning/phases/1-project-overview/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/2-technical-stack/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/3-architecture/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/4-data-model/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/5-project-structure/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/6-out-of-scope/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/7-ui/: -SUMMARY-01.md  PLAN-01.md
alembic/: env.py  script.py.mako
alembic/versions/: .gitkeep
dashboard/src/types/: index.ts
migrations/: init.sql
migrations/versions/: 001_initial_schema.py
models/: __init__.py  enums.py  failure.py  job.py  proxy_session.py  result.py  retry_policy.py  scrape_task.py  worker.py
scraper/: __init__.py  config.py  database.py  rabbitmq.py
scraper/worker/: __init__.py  base_worker.py  job_processor.py
setup/: install-playwright.sh  prometheus.yml  rabbitmq-definitions.json  rabbitmq.conf
setup/grafana/provisioning/dashboards/: dashboards.yml
setup/grafana/provisioning/datasources/: datasources.yml
src/: __init__.py
src/api/: __init__.py  config.py  dependencies.py  main.py
src/api/routes/: __init__.py  batches.py  jobs.py
src/app/: __init__.py  main.py
src/app/api/: __init__.py  dependencies.py  schemas.py
src/app/core/: __init__.py  config.py  exceptions.py  logging.py
src/app/models/: __init__.py  database.py  models.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  circuit_breaker.py  config.py  logging.py  metrics.py
src/models/: __init__.py  base.py  batch.py  error_log.py  job.py  proxy_state.py  result.py
src/scope/: SCOPE.md
src/scraper/: __init__.py  browser.py  page.py  scraper.py
src/scraper/extractors/: __init__.py  amazon.py
src/services/: llm_classifier.py  queue_publisher.py
src/workers/: __init__.py  backoff.py  base_worker.py  circuit_breaker.py  scraper_worker.py
tests/: __init__.py  test_models.py
