[tool.poetry]
name = "scraper-framework"
version = "1.0.0"
description = "Production web scraping framework with Playwright, RabbitMQ, and PostgreSQL"
authors = ["Scraper Team"]
readme = "README.md"
packages = [{include = "scraper"}]

[tool.poetry.dependencies]
python = "^3.12"

# Scraping/Playwright
playwright = "^1.42.0"
playwright-stealth = "^1.0.6"
xvfbwrapper = "^0.2.13"

# Message Queue/Workers
pika = "^1.3.2"
aio-pika = "^9.4.0"
tenacity = "^8.2.3"
circuitbreaker = "^1.4.0"

# Database/ORM
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"

# LLM Integration
openai = "^1.12.0"
anthropic = "^0.18.0"

# API/Web Framework
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}

# Monitoring/Logging
structlog = "^24.1.0"
prometheus-client = "^0.19.0"

# Utilities
python-dotenv = "^1.0.1"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
pydantic = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.4"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
ruff = "^0.1.14"

[tool.poetry.group.test.dependencies]
httpx = "^0.26.0"
faker = "^22.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["scraper"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]
